syntax = "proto3";
package protos;


//消息包
message MessPacketPt {
    uint32 len = 1;//长度
    uint32 cmd = 2;//命令号
    bytes data = 3;//数据
}

//玩家信息
message PlayerPt{
	uint32 maxScore = 1;//最高得分
	uint32 maxJumpRange = 2;//最高跳跃范围
	uint32 maxMultiple = 3;//最大高倍数
	uint32 maxJumpLevel = 4;//最大跳跃段数
	uint32 maxcp = 5;//最大关卡
}

// 资源封装
message ResourcesPt{
	uint32 type = 1;//类型（1：碎片 2：资源）
    uint32 id = 2;//资源id
    double num = 3;//数量
}

//buff封装
message BuffPt{
	uint32 buffCategory = 1;//buff分类
	uint32 buffStartTime = 2;//buff开始时间
	uint32 buffEndTime = 3;//buff结束时间
}

//星球封装
message HeatBallPt{
	uint32 index = 1;//下标（0开始）
	uint32 heatBallId = 2;//对应配置表的星球id
}

//星球购买次数封装
message HeatBallBuyTimesPt{
	uint32 heatBallId = 1;//对应配置表的星球id
	uint32 buyTimes = 2;//购买次数
}

//排行榜数据
message RankInfoPt{
	uint32 index = 1;//排行榜下标
	string avatar = 2;//头像url
	string nickName = 3;//昵称
	uint32 score = 4;//积分
}

//星球图鉴数据
message HeatBallTuJiaonPt{
	uint32 heatBallId = 1;//星球id
}

